--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.8.4",
+  "version": "0.8.5",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -193,8 +193,8 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.5",
     "@types/yargs": "^17.0.35",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
+    "@typescript-eslint/eslint-plugin": "8.24.1",
+    "@typescript-eslint/parser": "8.24.1",
     "@vitest/coverage-v8": "^4.0.18",
     "depcheck": "^1.4.7",
     "eslint": "^9.21.0",
@@ -208,11 +208,11 @@
     "rollup-plugin-dts": "^6.1.1",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.56.1",
+    "typescript-eslint": "8.56.1",
     "vitest": "^4.0.18"
   },
   "peerDependencies": {
-    "redis": "^4.6.12"
+    "redis": "^4.6.12 || ^5.10.0"
   },
   "peerDependenciesMeta": {
     "redis": {
