--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syntropylog",
-  "version": "0.8.16",
+  "version": "0.9.0",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -195,6 +195,7 @@
     "@types/node": "^22.13.5",
     "@typescript-eslint/eslint-plugin": "8.24.1",
     "@typescript-eslint/parser": "8.24.1",
+    "@vitest/coverage-istanbul": "4.0.18",
     "@vitest/coverage-v8": "^4.0.18",
     "depcheck": "^1.4.7",
     "eslint": "^9.21.0",
@@ -212,8 +213,8 @@
     "vitest": "^4.0.18"
   },
   "peerDependencies": {
-    "redis": "^4.6.12 || ^5.10.0",
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "redis": "^4.6.12 || ^5.10.0"
   },
   "peerDependenciesMeta": {
     "redis": {
